# Meve-framework

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  PHASE4_FIX_NOTES.md  QUICK_START.md  README.md  TODO.md  all_questions.json  claude_desktop_config.json  color_utils.py  main.py  meve_data.py  meve_engine.py  meve_mcp_server.py  phase1_knn.py  phase2_verification.py  phase3_fallback.py  phase4_contextpriortization.py  phase4_prioritization.py  phase5_budgeting.py  postman_collection.json  pyproject.toml  test_logger_migration.py  test_mcp_server.py
.claude/agents/: document-retrieval-summarizer.md
.github/: copilot-instructions.md
__tests__/fixtures/: sample_data.py
__tests__/unit/: test_engine.py
config/: default.yaml  development.yaml  production.yaml
data/: hotpot_dev_distractor_v1.json  wikipedia_en_science_physics_10.json
docs/: MEVE_PERFORMANCE_REPORT.md  architecture.md  data.md  llms-full.txt  logger.md  questions.md
examples/: answer_questions.py  api_server.py  basic_rag.py  basic_usage.py  compare_rag_systems.py  meve.example.py  meve_rag.py  rag.py  simple_rag.py  test_api_client.py  test_mcp_server.py
integrations/agents/: context_provider.py
integrations/api/: README.md  __init__.py  app.py  client.py  request_handler.py  schemas.py
integrations/api/routers/: __init__.py  config.py  data_sources.py  health.py  retrieval.py
integrations/mcp/: __init__.py  server.py  storage.py
meve/: __init__.py
meve/core/: __init__.py  engine.py  models.py
meve/phases/: __init__.py  phase1_knn.py  phase2_verification.py  phase3_fallback.py  phase4_prioritization.py  phase5_budgeting.py
meve/services/: __init__.py  vector_db_client.py
meve/utils/: __init__.py  chromadb_utils.py  logger.py  metrics.py  model_manager.py
result/: question_answers.json  question_answers_report.txt  rag_comparison.json  rag_comparison_report.txt
result/all/: report_191748.md  report_417732.md  report_499581.md
result/mcp_test_contexts/: 20251123_114136_61137c25525c.json  20251123_114136_6a53ecff65b2.json  20251123_114347_61137c25525c.json  20251123_114347_6a53ecff65b2.json  20251123_121259_61137c25525c.json  20251123_121300_6a53ecff65b2.json  20251123_122302_61137c25525c.json  20251123_122303_6a53ecff65b2.json  index.json
scripts/: add_bioasq_to_chromadb.py  add_wikipedia_to_chromadb.py  download_data.py  load_hotpotqa_cloud.py  setup_chromadb.py
services/: __init__.py  vector_db_client.py
test_chromadb_server/: QUICK_REFERENCE.md  README.md  populate_simple_test_data.py  populate_test_datasets.py  start_test_server.py
test_chromadb_server/chroma_test_data/: chroma.sqlite3
