[project]
name = "meve-framework"
version = "0.2.0"
description = "Multi-phase Efficient Vector Retrieval - A 5-phase pipeline for efficient context retrieval in RAG systems"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "MeVe Contributors"}
]
license = {text = "MIT"}
keywords = ["rag", "retrieval", "vector-search", "nlp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "chromadb>=1.1.0",
    "datasets>=4.1.1",
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.35.3",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "rank-bm25>=0.2.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "tinydb>=4.8.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "pyyaml>=6.0",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
mcp = [
    # Add MCP server dependencies when available
]
agents = [
    "langchain>=0.1.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
all = [
    "meve-framework[dev,mcp,agents,api]",
]

[project.urls]
Homepage = "https://github.com/nakulbh/Meve-framework"
Repository = "https://github.com/nakulbh/Meve-framework"
Issues = "https://github.com/nakulbh/Meve-framework/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
